--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   z-index: 3;
   width: 100%;
-  // position: fixed;
+  position: relative;
   top: 0;
   padding: 1em 0;
   &__logo {
