--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -1,16 +1,20 @@
 .header {
   width: 100%;
   justify-content: space-between;
-  z-index: 3;
+  z-index: 99!important;
   width: 100%;
-  position: relative;
+  position: fixed;
   top: 0;
   padding: 1em 0;
+  background-color: rgba(#000,.9);
   &__logo {
-    width: 132px;
+    max-width: 132px;
+    height: 30px;
+    position: relative;
   }
   &__content {
     display: flex;
     justify-content: space-between;
+    
   }
 }
