--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -1,6 +1,6 @@
 .main {
   width: 100%;
-  // margin-top: 1em;
+  margin-top: 63px;
   // height: 250px;
   display: flex;
   flex-direction: column;
