--- a/src/assets/styles/_menu.scss
+++ b/src/assets/styles/_menu.scss
@@ -1,10 +1,16 @@
 .navigation {
   width: 100%;
-  display: none;
   list-style: none;
+  margin: 0;
+  padding: 0;
   color: var(--white);
-  border: 1px solid red;
-  justify-content: center;
+  box-sizing: border-box;
+  z-index: 5;
+  transition: .3s;
+  background: rgba(#000,.9);
+  display: none;
+  animation-duration: .3s;
+
   a {
     color: #fff;
     text-decoration: none;
@@ -13,6 +19,12 @@
 
   &__item {
     color: #fff;
+    font-size: 1em;
+    // font-weight: 600;
+    margin: 1em 0;
+  }
+  &__checkbox {
+    display: none;
   }
   &__button {
     width: 30px;
@@ -23,11 +35,13 @@
     flex-direction: column;
     justify-content: space-between;
     padding: .5em 0;
+    position: relative;
     .ico__line {
       width:100%;
       height: 1px;
       display: block;
       background-color: var(--white);
+      transition: all .3s;
     }
   }
 
@@ -35,14 +49,37 @@
 
     &:checked {
       & ~ .navigation {
-        display: block;
+        display: flex;
+        opacity: 1;
+        flex-direction: column;
+        justify-content: flex-start;
+        text-align: center;
+        width: 100%;
         position: absolute;
         top: 100%;
         padding: 1em;
         left: 0;
         right: 0;
-        
+        background-color: rgba(#000,0.9);
+        height: 100vh;
+
+        &__button {
+          .ico__line:nth-child(1){
+            transform:  translateY(7px) rotate(-40deg);
+          }
+          .ico__line:nth-child(2){
+            opacity: 0;
+            // transform: rotate(360deg) translateX(15px
+          }
+          .ico__line:nth-child(3){
+            transform:  translateY(-7px) rotate(40deg);
+          }
+          
+        }
+       
       }
+
+      
     }
   }
 
