change effect .ico__line in menu checked status

--- a/src/assets/styles/_menu.scss
+++ b/src/assets/styles/_menu.scss
@@ -69,7 +69,7 @@
           }
           .ico__line:nth-child(2){
             opacity: 0;
-            // transform: rotate(360deg) translateX(15px
+            transform: translateX(-600%);
           }
           .ico__line:nth-child(3){
             transform:  translateY(-7px) rotate(40deg);
